# more-mojo

./: .gitignore  ARTIFACT_DOWNLOAD_GUIDE.md  ARTIFACT_DOWNLOAD_INSTRUCTIONS.md  Makefile  NOTIFICATION_SETUP.md  README.md  SLACK_NOTIFICATION_SETUP.md  build_master.sh  fix-build.patch  run_build_process.sh
.github/workflows/: autofix.yml  build_app.yml  build_app_and_plugins.yml  build_plugin_mac.yml  build_plugin_phase2.yml  build_with_logs.yml  chatops.yml  ci_app.yml  ci_only_build.yml  debug_artifact.yml  evaluate.yml  model_smoketest.yml  moremojo_build.yml  on_failure_autofix.yml  phase_1_5.yml  phase_1_5_debug.yml  phase_1_5_fix.yml  phase_1_5_fix_updated.yml  phase_2.yml  phase_3.yml  phased_build.yml  release.yml  simple_test.yml  slack_approval_only.yml  test_workflow.yml
MoreMojo_Comprehensive_Kit/: Makefile
MoreMojo_Comprehensive_Kit/.github/workflows/: build_app.yml  build_plugin_mac.yml
MoreMojo_Comprehensive_Kit/app/Sources/: ContentView.swift  MojoMakerView.swift  MoreMojoAssets.swift  MoreMojoContainer.swift  RealFeelStudioApp.swift
MoreMojo_Comprehensive_Kit/scripts/: bootstrap_macos.sh
MoreMojo_Phase1_FullDSP/: Makefile  README.md
MoreMojo_Phase1_FullDSP/.github/workflows/: build_app.yml  build_plugin_mac.yml
MoreMojo_Phase1_FullDSP/app/: Makefile  project.yml
MoreMojo_Phase1_FullDSP/app/Sources/: AnalogInterpolator.swift  AudioEngine.swift  ContentView.swift  Info.plist  Integrity.swift  Interpolators.swift  Metering.swift  MoreMojoAssets.swift  MoreMojoSimpleView.swift  PhotorealControls.swift
MoreMojo_Phase1_FullDSP/scripts/: bootstrap_macos.sh
app/: Info.plist  Makefile  build_app.sh  project.yml
app/MoreMojoStudio.xcodeproj/: project.pbxproj
app/MoreMojoStudio.xcodeproj/xcshareddata/xcschemes/: MoreMojoStudio.xcscheme
app/Resources/: faceplate_layout.json
app/Sources/: AnalogInterpolator+Configure.swift  AnalogInterpolator.swift  AppState.swift  AudioEngine.swift  AudioProcessingView.swift  BritStripFaceplate.swift  ContentView.swift  FaceplateOverlay.swift  ImportFixes.swift  Interpolators.swift  MojoMacro.swift  MojoMakerView.swift  MojoWheel.swift  MoreMojoAssets.swift  MoreMojoContainer.swift  MoreMojoSimpleView.swift  MoreMojoStudioApp.swift  PMXPalette.swift  PhotorealControls.swift  ProBritStripView.swift  ProcessorParams+Ext.swift  ProcessorParams.swift  ProcessorParams_DEPRECATED.swift  Recommendations.swift  RoundKnob.swift  SharedTypes.swift  StealMojoPanel_SwiftOnly.swift  StealMojoSwift.swift  SwiftMojoAnalyzer.swift  TopConsumerView.swift  UIMode.swift  WaveformSimple.swift
legacy/: build_master.sh
plugin/: CMakeLists.txt
plugin/Source/: PluginProcessor.cpp  PluginProcessor.h
plugin/scripts/: install_plugin.sh
scripts/: app_preflight_fix.sh  apply_repo_autofix.sh  asset_check.sh  autofix.sh  autofix_build.sh  bootstrap_macos.sh  build_app.sh  build_app_xcode.sh  build_plugin.sh  check_build_status.sh  check_main.swift  check_swift_syntax.sh  ci_build_wrapper.sh  ci_error_report.sh  ci_fetch_artifacts.sh  direct_download.sh  download_artifact.sh  download_artifacts.py  download_latest_artifact.py  fix_ci_build.sh  fix_imports.sh  fix_minimal_build.sh  generate_compat_project.sh  local_build_app.sh  preflight_build_fix.sh  preflight_dedupe.sh  preflight_fix.sh  preflight_guard.sh  test_token.sh  trigger_phases.sh
scripts/swarm/: agent_hub.py  run_local.sh
tools/evaluator_cli/: Makefile  evaluator.swift
